--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="principal container"> 
+    <section class="principal container">
+    <div>
     <h1> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <img src="Combo 2.png" alt="O combo+ é a junção do alura+ e o alura lingua">
-    <a href="www.alura.com.br" class="container-botao">Assine por 12x de R$120,00*</a>
-</section>
-<section>
-    <img src="Buttons.png" alt="">
-</section>
-<section>
-    <img src="computador.png" alt="">
+    <img src="Combo 2.png" alt="O Combo+ é a junção do Alura+ e o Alura Língua.">
+    <a href="www.alura.com.br" class="container-botal">Assine po 12x de R$120,00*</a>
+    <a href="www.alura.com.br" class="container-botao botao-secundario">Assinar somente o Alura+</a>
+    <p class="container-aviso"> O preço pode variar caso a assinatura seja feita em outros planos.</p>
+</div>
 </section>
 </body>
 </html>
